--- a/contacto.html
+++ b/contacto.html
@@ -43,7 +43,7 @@
                             <a class="nav-link" href="postVenta.html">Post-Venta</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="vendeTuAuto.html">Vende tu Auto</a>
+                            <a class="nav-link" href="quienesSomos.html">Quiénes somos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contacto.html">Contacto</a>
