--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <a class="nav-link" href="postVenta.html">Post-Venta</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="vendeTuAuto.html">Vende tu Auto</a>
+                            <a class="nav-link" href="quienesSomos.html">Quiénes somos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contacto.html">Contacto</a>
@@ -178,27 +178,57 @@
             </div>
         </div>
         <div class="suscribe">
-            <span class="suscribe__bold2">Reciba nuestras novedades</span><div>Respetamos tu casilla de entrada y por eso nuestro compromiso es enviarle solo las novedades que le interesen.</div>
+            <span class="suscribe__bold2">Cotizá tu auto</span><div>Completá el siguiente formulario y nos contactaremos con vos a la brevedad.</div>
             <form class="suscribe__texto">
-                <div class="form-group row">
-                    <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-                    <div class="col-sm-10">
-                      <input type="email" class="form-control" id="inputEmail3">
-                    </div>
+              <div class="form-row">
+                <div class="form-group col-md-6">
+                  <label for="inputEmail4">Email</label>
+                  <input type="email" class="form-control" id="inpEmail" placeholder="depaul@messi.com">
+                </div>
+                <div class="form-group col-md-6">
+                  <label for="inputPassword4">Nombre Completo</label>
+                  <input type="password" class="form-control" id="inpNombre" placeholder="Leandro Paredes">
+                </div>
+              </div>
+                <div class="form-row">
+                  <div class="form-group col-md-6">
+                    <label for="inputEmail4">Marca</label>
+                    <input type="email" class="form-control" id="inpMarca" placeholder="Scaloneta">
+                  </div>
+                  <div class="form-group col-md-6">
+                    <label for="inputPassword4">Modelo</label>
+                    <input type="password" class="form-control" id="inpModelo" placeholder="Champagne">
+                  </div>
+                </div>
+                <div class="form-row">
+                  <div class="form-group col-md-6">
+                    <label for="inputEmail4">Año</label>
+                    <input type="email" class="form-control" id="inpAño" placeholder="2021">
+                  </div>
+                  <div class="form-group col-md-6">
+                    <label for="inputPassword4">Kilometraje</label>
+                    <input type="password" class="form-control" id="inpKilometraje" placeholder="85000">
+                  </div>
                 </div>
                 <fieldset class="form-group row">
-                    <legend class="col-form-label col-sm-2 float-sm-left pt-0">Suscribe</legend>
-                    <div class="col-sm-10">
-                      <div class="form-check">
-                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
-                        <label class="form-check-label" for="gridRadios1">
-                          Deseo que me envíen las ofertas destacadas
-                        </label>
-                      </div>
-                </fieldset>
+                  <legend class="col-form-label col-sm-2 float-sm-left pt-0">PEDIR COTIZACIÓN</legend>
+                  <div class="col-sm-10">
+                    <div class="form-group form-check">
+                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                      <label class="form-check-label" for="exampleCheck1">Quiero que me contacte un vendedor a la brevedad.</label>
+                    </div>
+              </fieldset>
+              <fieldset class="form-group row">
+                <legend class="col-form-label col-sm-2 float-sm-left pt-0">NEWSLETTER</legend>
+                <div class="col-sm-10">
+                  <div class="form-group form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Deseo que me envíen las ofertas destacadas.</label>
+                  </div>
+            </fieldset>
                 <div class="form-group row width100">
                     <div class="col-sm-10">
-                        <button type="submit" class="btn btn-primary">Deseo suscribirme</button>
+                        <button type="submit" class="btn btn-primary">Enviar</button>
                     </div>
                 </div>
             </form>
