--- a/quienesSomos.html
+++ b/quienesSomos.html
@@ -11,7 +11,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   	/>
-    <title>Cotización-Olimpia Automotores</title>
+    <title>Quiénes somos-Olimpia Automotores</title>
   </head>
   <body>
     <div class="container-fluid width100">
@@ -43,7 +43,7 @@
                             <a class="nav-link" href="postVenta.html">Post-Venta</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="vendeTuAuto.html">Vende tu Auto</a>
+                            <a class="nav-link" href="quienesSomos.html">Quiénes somos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contacto.html">Contacto</a>
@@ -53,69 +53,46 @@
             </nav>
         </div>
 		<head>
-			<h1 class="titulo">Querés vender tu auto?</h1>
+			<h1 class="titulo">Queremos que nos conozcas</h1>
     </head>
-		<form class="margin4" method="GET" action="volverinicio.html">
-		  <div class="form-row">
-		    <div class="form-group col-md-6">
-		      <label for="inputEmail4">Nombre Completo</label>
-		      <input type="email" class="form-control" id="inpNombre">
-		    </div>
-		    <div class="form-group col-md-6">
-		      <label for="inputPassword4">Marca</label>
-		      <input type="password" class="form-control" id="inpMarca">
-		    </div>
-		  </div>
-		  <div class="form-group">
-		    <label for="inputAddress">Modelo</label>
-		    <input type="text" class="form-control" id="inpModelo" placeholder="Seleccione su modelo">
-		  </div>
-		  <div class="form-group">
-		    <label for="inputAddress2">Año</label>
-		    <input type="text" class="form-control" id="inpAño" placeholder="Año de fabricación">
-		  </div>
-		  <div class="form-row">
-		    <div class="form-group col-md-4">
-		      <label for="inputCity">Kilometraje</label>
-		      <input type="text" class="form-control" id="inpKilometraje">
-		    </div>
-		    <div class="form-group col-md-4">
-		      <label for="inputState">Sucursal</label>
-		      <select id="inpSucursal" class="form-control">
-		        <option selected>Elija una sucursal</option>
-		        <option>Capital Federal</option>
-		        <option>Rosario</option>
-		        <option>Córdoba</option>
-		        <option>París</option>
-		        <option>Cancún</option>
-		        <option>Miami</option>
-		      </select>
-		    </div>
-		    <div class="form-group col-md-4">
-    			<label for="inputEmail3">Email</label>
-    			<div class="col-sm-12">
-      			<input type="email" class="form-control" id="inpEmail">
-    			</div>
-  			</div>
-		  </div>
-			<div class="form-group">
-			    <label for="formControlRange">En qué estado de conservación se encuentra su vehículo?</label>
-			    <input type="range" class="form-control-range" id="inpEstado">
-			</div>
-      <div class="form-group">
-        <label for="exampleFormControlFile1">Subí una foto del auto</label>
-        <input type="file" class="form-control-file" id="exampleFormControlFile1">
+		<div>
+      <div class="destacados margin">
+        <div class="col-12 col-md-12 texto row">
+          <div class="card" style="width: 18rem;">
+            <img src="imagenes/scaloni.png" class="card-img-top" alt="scaloni">
+            <div class="card-body">
+              <p class="card-text bold">Lionel Scaloni.</p>
+              <p class="card-text textoBlack">Socio-Gerente de marketing.</p>
+              <p class="card-text textoBlack">lioscaloni@gmail.com</p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="imagenes/messi.png" class="card-img-top" alt="messi">
+            <div class="card-body">
+              <p class="card-text bold">Lionel Messi.</p>
+              <p class="card-text textoBlack">Socio-Gerente de ventas.</p>
+              <p class="card-text textoBlack">liomessi@gmail.com</p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="imagenes/otamendi.jpg" class="card-img-top" alt="otamendi">
+            <div class="card-body">
+              <p class="card-text bold">Nicolás Otamendi.</p>
+              <p class="card-text textoBlack">Community manager.</p>
+              <p class="card-text textoBlack">nicootamendi@gmail.com</p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="imagenes/lautaro.jpg" class="card-img-top" alt="lautaro">
+            <div class="card-body">
+              <p class="card-text bold">Lautaro Martinez.</p>
+              <p class="card-text textoBlack">Vendedor.</p>
+              <p class="card-text textoBlack">lautaromartinez@gmail.com</p>
+            </div>
+          </div>
+        </div>
       </div>
-		  <div class="form-group">
-		    <div class="form-check">
-		      <input class="form-check-input" type="checkbox" id="gridCheck">
-		      <label class="form-check-label" for="gridCheck">
-		        Confirmo que los datos colocados son reales
-		      </label>
-		    </div>
-		  </div>
- 			 <button type="submit" class="btn btn-primary">Pedir cotización</button>
-		</form>
+    </div>
 		<div class="suscribe">
             <span class="bold2">Reciba nuestras novedades</span><div>Respetamos tu casilla de entrada y por eso nuestro compromiso es enviarle solo las novedades que le interesen.</div>
             <form class="texto">
