--- a/contacto.html
+++ b/contacto.html
@@ -110,18 +110,16 @@
                   </div>
               </div>
               <fieldset class="form-group row">
-                  <legend class="col-form-label col-sm-2 float-sm-left pt-0">Suscribe</legend>
-                  <div class="col-sm-10">
-                    <div class="form-check">
-                      <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
-                      <label class="form-check-label" for="gridRadios1">
-                        Deseo que me envíen las ofertas destacadas
-                      </label>
-                    </div>
+                <legend class="col-form-label col-sm-2 float-sm-left pt-0">NEWSLETTER</legend>
+                <div class="col-sm-10">
+                  <div class="form-group form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Deseo que me envíen las ofertas destacadas.</label>
+                  </div>
               </fieldset>
               <div class="form-group row width100">
                   <div class="col-sm-10">
-                      <button type="submit" class="btn btn-primary">Deseo suscribirme</button>
+                      <button type="submit" class="btn btn-primary">Enviar</button>
                   </div>
               </div>
           </form>
