--- a/postVenta.html
+++ b/postVenta.html
@@ -63,24 +63,15 @@
     <div class="row margin">
       <div class="col-12 col-md-12 col-lg-4 texto">
         <img src="imagenes/mecanico.jpg" loading="lazy" width="300" height="200">
-        <div><span class="bold">Mecánica Integral</span>Nos dedicamos a brindar un servicio exclusivo a nuestros
-          clientes, con un compromiso honesto y mucha predisposición. 20 Años de experiencia y nuestro apellido como
-          respaldo. Nuestros clientes también son nuestra familia. Acérquese a nuestras sucursales o llamenos ahora para
-          conocernos.</div>
+        <div><span class="bold">Mecánica Integral</span>Tenemos una planta verificadora propia con un equipo de 24 técnicos especializados por marca.</div>
       </div>
       <div class="col-12 col-md-12 col-lg-4 texto">
         <img src="imagenes/pintura.jpg" loading="lazy" width="300" height="200">
-        <div><span class="bold">Cabina de Pintura</span>Le facilitamos la gestión de toda la operatoria para que vender
-          su auto y comprar uno nuevo sea rápido y eficaz. Además lo asesoramos y podemos tomar su vehículo en
-          consignación. En Munafó Automóviles valoramos su tiempo y su confianza, y por eso le aseguramos un buen
-          negocio siempre.</div>
+        <div><span class="bold">Cabina de Pintura</span>Contamos con tecnología PG y cabinas dedicadas con las últimas herramientas.</div>
       </div>
       <div class="col-12 col-md-12 col-lg-4 texto">
         <img src="imagenes/acarreo.jpg" loading="lazy" width="300" height="200">
-        <div><span class="bold">Servicio de Acarreo</span>Nos aseguramos el perfecto estado de nuestros vehículos y
-          proveemos servicios integrales de mecánica preventiva para autos de todas las gamas. Electrónica avanzada,
-          cabina de pintura ISO9001, personal capacitado y toda la tecnología en un sólo lugar. Pedí asesoramiento
-          personalizado.</div>
+        <div><span class="bold">Servicio de Acarreo</span>Ofrecemos este servicio con nuestra propia flota de grúas.</div>
       </div>
     </div>
     <div class="suscribe width100">
