--- a/postVenta.html
+++ b/postVenta.html
@@ -39,8 +39,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="vehiculos.html">0 Km</a>
-                <a class="dropdown-item" href="vehiculos.html">Usados</a>
-                <a class="dropdown-item" href="vehiculos.html">De colección</a>
+                <a class="dropdown-item" href="vehiculos.html#autosUsados">Usados</a>
               </div>
             </li>
             <li class="nav-item active">
@@ -57,9 +56,9 @@
       </nav>
     </div>
 
-    <head>
+    <div>
       <h1 class="titulo">El mejor servicio Post-Venta!!!</h1>
-    </head>
+    </div>
     <div class="row margin">
       <div class="col-12 col-md-12 col-lg-4 texto">
         <img src="imagenes/mecanico.jpg" loading="lazy" width="300" height="200">
@@ -91,6 +90,7 @@
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Deseo recibir ofertas destacadas.</label>
             </div>
+          </div> 
         </fieldset>
         <div class="form-group row width100">
           <div class="col-sm-10">
