--- a/quienesSomos.html
+++ b/quienesSomos.html
@@ -39,8 +39,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="vehiculos.html">0 Km</a>
-                <a class="dropdown-item" href="vehiculos.html">Usados</a>
-                <a class="dropdown-item" href="vehiculos.html">De colección</a>
+                <a class="dropdown-item" href="vehiculos.html#autosUsados">Usados</a>
               </div>
             </li>
             <li class="nav-item active">
@@ -57,9 +56,9 @@
       </nav>
     </div>
 
-    <head>
+    <div>
       <h1 class="titulo">Queremos que nos conózcas!!!</h1>
-    </head>
+    </div>
     <div class="staff">
       <h2>
         Nuestro staff
@@ -100,7 +99,7 @@
           </div>
         </div>
       </div>
-      <div class="destacados margin">
+      <div class="row destacados margin">
         <div class="col-12 col-md-12 texto row">
           <div class="card" style="width: 18rem;">
             <img src="imagenes/dimaria.jpg" loading="lazy" class="card-img-top" alt="dimaria">
@@ -182,6 +181,7 @@
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Deseo recibir ofertas destacadas.</label>
             </div>
+          </div> 
         </fieldset>
         <div class="form-group row width100">
           <div class="col-sm-10">
