--- a/vehiculos.html
+++ b/vehiculos.html
@@ -38,8 +38,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="vehiculos.html">0 Km</a>
-                <a class="dropdown-item" href="vehiculos.html">Usados</a>
-                <a class="dropdown-item" href="vehiculos.html">De colección</a>
+                <a class="dropdown-item" href="vehiculos.html#autosUsados">Usados</a>
               </div>
             </li>
             <li class="nav-item active">
@@ -56,9 +55,9 @@
       </nav>
     </div>
 
-    <head id="tituloVehiculo">
+    <div id="tituloVehiculo">
       <h1 class="titulo">Elegí tu proximo automóvil!!!</h1>
-    </head>
+    </div>
     <div id="autosCero">
       <h2>
         Automóviles 0Km!!!
