--- a/volverinicio.html
+++ b/volverinicio.html
@@ -39,8 +39,7 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <a class="dropdown-item" href="vehiculos.html">0 Km</a>
-                                <a class="dropdown-item" href="vehiculos.html">Usados</a>
-                                <a class="dropdown-item" href="vehiculos.html">De colección</a>
+                                <a class="dropdown-item" href="vehiculos.html#autosUsados">Usados</a>
                             </div>
                         </li>
                         <li class="nav-item active">
