--- a/contacto.html
+++ b/contacto.html
@@ -39,8 +39,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="vehiculos.html">0 Km</a>
-                <a class="dropdown-item" href="vehiculos.html">Usados</a>
-                <a class="dropdown-item" href="vehiculos.html">De colección</a>
+                <a class="dropdown-item" href="vehiculos.html#autosUsados">Usados</a>
               </div>
             </li>
             <li class="nav-item active">
@@ -57,9 +56,9 @@
       </nav>
     </div>
 
-    <head id="tituloContacto">
+    <div id="tituloContacto">
       <h1 class="titulo">Dejanos tu consulta!!!</h1>
-    </head>
+    </div>
     <form class="margin4" method="GET" action="volverinicio.html">
       <div class="form-row">
         <div class="form-group col-md-6">
@@ -122,6 +121,7 @@
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Deseo recibir ofertas destacadas.</label>
             </div>
+          </div> 
         </fieldset>
         <div class="form-group row width100">
           <div class="col-sm-10">
